# challenges

./: .gitignore  .gitmodules  README.md
AdventOfCode/2015-cpp/: .gitignore  CMakeLists.txt
AdventOfCode/2015-cpp/day1/day1-app/: CMakeLists.txt  main.cpp
AdventOfCode/2015-cpp/day2/: CMakeLists.txt
AdventOfCode/2015-cpp/day2/day2-app/: CMakeLists.txt  main.cpp
AdventOfCode/2015-cpp/shared/aoc-file-lib/: CMakeLists.txt
AdventOfCode/2015-cpp/shared/aoc-file-lib/src/: file.cpp
AdventOfCode/2021/: README.md
AdventOfCode/2021-post/: 2021-post.sln
AdventOfCode/2021-post/01/: Program.cs
AdventOfCode/2022/: 2022.sln
AdventOfCode/2022/00/: 00.csproj  Program.cs
AdventOfCode/2022/01/: 01.csproj  Options.cs  Program.cs
AdventOfCode/2022/02/: 02.csproj  Options.cs  Program.cs  RPSGame.cs
AdventOfCode/2022/02.Tests/: 02.Tests.csproj  RPSGameTests.cs
AdventOfCode/2022/03/: 03.csproj  Program.cs
AdventOfCode/2022/04/: 04.csproj  Program.cs
AdventOfCode/2022/04.Tests/: 04.Tests.csproj  PartTwoTests.cs
AdventOfCode/2022/05/: 05.csproj  Program.cs
AdventOfCode/2022/05.Tests/: 05.Tests.csproj  CraneTests.cs  ParserTests.cs
AdventOfCode/2022/06/: 06.csproj  Program.cs
AdventOfCode/2022/07/: 07.csproj  Program.cs
AdventOfCode/2022/07.Tests/: 07.Tests.csproj  ParserTests.cs
AdventOfCode/2022/08/: Program.cs
AdventOfCode/2022/08.Tests/: 08.Tests.csproj
AdventOfCode/2022/09/: 09.csproj  Program.cs
AdventOfCode/2022/09.Tests/: 09.Tests.csproj
AdventOfCode/2022/10/: 10.csproj  Program.cs
AdventOfCode/2022/10.Tests/: 10.Tests.csproj  CpuTests.cs
AdventOfCode/2022/11/: 11.csproj  Program.cs
AdventOfCode/2022/Day08/: Program.cs
AdventOfCode/2022/Day08.Tests/: Day08.Tests.csproj
AdventOfCode/2023-cpp/: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
AdventOfCode/2023-cpp/day0-copy-to-start/: CMakeLists.txt
AdventOfCode/2023-cpp/day0-copy-to-start/day1-app/: CMakeLists.txt  main.cpp
AdventOfCode/2023-cpp/day1/: CMakeLists.txt
AdventOfCode/2023-cpp/day1/day1-app/: CMakeLists.txt  input.txt  main.cpp
AdventOfCode/2023-cpp/day1/day1-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/day1/day1-lib/include/day1/: lib.hpp
AdventOfCode/2023-cpp/day1/day1-lib/src/: lib.cpp
AdventOfCode/2023-cpp/day1/day1-test/: CMakeLists.txt  main.cpp  test.cpp
AdventOfCode/2023-cpp/day2/: CMakeLists.txt
AdventOfCode/2023-cpp/day2/day2-app/: CMakeLists.txt  main.cpp
AdventOfCode/2023-cpp/day2/day2-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/day2/day2-lib/include/day2/: lib.hpp
AdventOfCode/2023-cpp/day2/day2-lib/src/: lib.cpp
AdventOfCode/2023-cpp/day2/day2-test/: CMakeLists.txt  test.cpp
AdventOfCode/2023-cpp/day3/: CMakeLists.txt
AdventOfCode/2023-cpp/day3/day3-app/: CMakeLists.txt  main.cpp
AdventOfCode/2023-cpp/day3/day3-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/day3/day3-lib/include/day3/: lib.hpp
AdventOfCode/2023-cpp/day3/day3-lib/src/: lib.cpp
AdventOfCode/2023-cpp/day3/day3-test/: CMakeLists.txt  test.cpp
AdventOfCode/2023-cpp/day4/: CMakeLists.txt
AdventOfCode/2023-cpp/day4/day4-app/: CMakeLists.txt  main.cpp
AdventOfCode/2023-cpp/day4/day4-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/day4/day4-lib/include/day4/: lib.hpp
AdventOfCode/2023-cpp/day4/day4-lib/src/: lib.cpp
AdventOfCode/2023-cpp/day4/day4-test/: CMakeLists.txt  test.cpp
AdventOfCode/2023-cpp/day5/: CMakeLists.txt
AdventOfCode/2023-cpp/day5/day5-app/: CMakeLists.txt  main.cpp
AdventOfCode/2023-cpp/day5/day5-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/day5/day5-lib/include/day5/: lib.hpp
AdventOfCode/2023-cpp/day5/day5-lib/src/: lib.cpp
AdventOfCode/2023-cpp/day5/day5-test/: CMakeLists.txt  test.cpp
AdventOfCode/2023-cpp/shared/: CMakeLists.txt
AdventOfCode/2023-cpp/shared/aoc-file-lib/: CMakeLists.txt
AdventOfCode/2023-cpp/shared/aoc-file-lib/include/aoc-file-lib/: file.hpp  string_helpers.hpp
AdventOfCode/2023-cpp/shared/aoc-file-lib/src/: string_helpers.cpp
ChristmasCodingChallenge2021/: README.md
ChristmasCodingChallenge2021/UniqueArrays/UniqueArray/: UniqueArray.py  UniqueArray.pyproj  UniqueArray.sln
codesignal/CollisionDetection/: CollisionDetection.sln
codesignal/CollisionDetection/CollisionDetection.Library/: CollisionDetection.Library.csproj  Solution.cs
codesignal/CollisionDetection/CollisionDetection.Tests/: CollisionDetection.Tests.csproj  SolutionTests.cs
codewars/: string-ends-with.ipynb
codewars/cpp/: .gitignore  CMakeLists.txt
codewars/cpp/rps_app/: CMakeLists.txt  app.cpp
codewars/cpp/rps_lib/: CMakeLists.txt
codewars/cpp/rps_lib/include/rps_lib/: lib.hpp
codewars/cpp/rps_lib/src/: lib.cpp
codewars/cpp/rps_unittests/: CMakeLists.txt  testlib.cpp
codewars/csharp/: codewars.csharp.sln
codewars/csharp/kata-array-diff.benchmark/: Program.cs  kata-array-diff.benchmark.csproj
codewars/csharp/kata-array-diff.library/: Kata.cs  Others.cs  kata-array-diff.library.csproj
codewars/csharp/kata-array-diff.unittests/: KataTests.cs  kata-array-diff.unittests.csproj
leetcode/: CMakeLists.txt
leetcode/001/: CMakeLists.txt  lib.hpp  test.cpp
leetcode/004/: CMakeLists.txt  lib.cpp  lib.hpp  test.cpp
leetcode/020/020/: Solution.cs
leetcode/020/020.UnitTests/: 020.UnitTests.csproj  UnitTest1.cs
leetcode/050/: solution.ipynb
leetcode/050/050/: 050.sln  Program.cs
misc/CollisionDetection/: CollisionDetection.sln
misc/CollisionDetection/CollisionDetection.Library/: Solution.cs
misc/CollisionDetection/CollisionDetection.Tests/: SolutionTests.cs
misc/CollisionDetection/CollisionDetection.Timer/: CollisionDetection.Timer.csproj  ListGenerator.cs  Program.cs  RunResult.cs
projecteuler/csharp/: project-euler.sln
projecteuler/csharp/pe001/: Program.cs
projecteuler/csharp/pe002/: Program.cs
projecteuler/csharp/pe003/: PrimeHandler.cs  (+1 more)
(+69 files in other folders)
